[package]
name = "adventurestothethird"
version = "0.1.0"
authors = ["Rasmus Rosengren <rsrp98@gmail.com>", ]

[dependencies]
gfx = "0.17.1"
gl = "0.11.0"
glutin = "0.19.0"
gfx_window_glutin = "0.27.0"
time = "0.1.40"
cgmath = "0.16.1"
winit = "0.18.0"

[dependencies.gfx-hal]
git = "https://github.com/gfx-rs/gfx"
rev = "84104892d44f1e8245dc53698a72d006435f3722"

[dependencies.gfx-backend-dx12]
git = "https://github.com/gfx-rs/gfx"
rev = "84104892d44f1e8245dc53698a72d006435f3722"

[build-dependencies]
glsl-to-spirv = "0.1.7"
